--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\WINDOWS\system32\SHELL32.dll,130
+IconResource=C:\Windows\System32\SHELL32.dll,23
 [ViewState]
 Mode=
 Vid=
